--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <!-- Meta tags for SEO-->
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -21,7 +23,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>create-reactstrap-prismic-app</title>
   </head>
   <body>
     <noscript>
@@ -38,5 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+        <!-- Prismic.io -->
+        <script>
+          window.prismic = {
+            endpoint: 'https://create-reactstrap-prismic-app.prismic.io/api/v2'
+          };
+        </script>
+        <script type="text/javascript" src="//static.cdn.prismic.io/prismic.min.js"></script>
   </body>
 </html>
